--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
     "lint": "./node_modules/.bin/eslint 'src/**.js' 'test/**.js'"
   },
   "dependencies": {
+    "@glidejs/glide": "^3.5.2",
     "dayjs": "^1.11.3",
-    "micromodal": "^0.4.10"
+    "micromodal": "^0.4.10",
+    "node-sass": "^6.0.1"
   }
 }
